kubernetes-config/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: events-api
  name: events-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-api
      ver: v1.0
  template:
    metadata:
      labels:
        app: events-api
        ver: v1.0
    spec:
      containers:
        - image: canyonjam/events-api:v1.0
          name: events-api
          ports:
            - containerPort: 8082
