kubernetes-config/web-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: events-web
  name: events-web-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events-web
      ver: v2.0
  template:
    metadata:
      labels:
        app: events-web
        ver: v2.0
    spec:
      containers:
        - image: canyonjam/evets-website:v2.0
          name: events-web
          ports:
           - containerPort: 8080
